# akashic

./: .env.example  .gitignore  Makefile  README.md  compose.release.yaml  compose.yaml  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/akashic/: config.py  database.py  main.py  protocol.py  scheduler.py
api/akashic/auth/: dependencies.py  jwt.py  ldap.py  oidc.py  oidc_provisioning.py  passwords.py  refresh.py
api/akashic/models/: __init__.py  audit_event.py  directory.py  entry.py  file.py  fs_person.py  fs_unbound_identity.py  principal_groups_cache.py  principals_cache.py  refresh_token.py  scan.py  scan_log_entry.py  scan_snapshot.py  scanner.py  scanner_claim_token.py  scanner_discovery_request.py  server_setting.py  source.py  tag.py  user.py  webhook.py
api/akashic/routers/: access.py  admin_audit.py  analytics.py  auth.py  browse.py  dashboard.py  directories.py  duplicates.py  effective_perms.py  entries.py  entry_content.py  files.py  group_resolution.py  identities.py  ingest.py  principals.py  purge.py  scan_progress.py  scan_websocket.py  scanner_discovery.py  scanners.py  scans.py  search.py  server_settings.py  source_test.py  sources.py  storage_explorer.py  tags.py  users.py  webhooks.py
api/akashic/schemas/: acl.py  audit.py  effective.py  entry.py  file.py  identity.py  scan.py  search.py  (+4 more)
api/alembic/: env.py
api/tests/: conftest.py  test_access_blast_radius.py  test_acl_denorm.py  test_acl_schemas.py  test_admin_audit_endpoints.py  test_alembic_baseline.py  test_analytics_timeseries.py  test_audit_service.py  test_auth.py  test_backfill_viewable.py  test_browse_permission_filter.py  test_dashboard_summary.py  test_duplicates_delete.py  test_effective_perms.py  test_effective_perms_endpoint.py  test_effective_perms_schemas.py  test_entry_acl_shape.py  test_entry_content_endpoint.py  test_entry_viewable_columns.py  test_filter_grammar.py  test_filter_param_routing.py  test_group_resolution_endpoint.py  test_group_resolver.py  test_group_resolver_samr.py  test_group_resolver_ssh.py  test_identities_endpoints.py  test_ingest_acl_equal.py  test_ingest_acl_wrapped.py  test_ingest_security_metadata.py  test_ingest_subtree_passthrough.py  test_oidc_provisioning.py  test_passwords.py  test_principal_resolver.py  test_principals_endpoint.py  test_reattach_orphans.py  test_refresh_tokens.py  test_scan_lease.py  test_scan_progress.py  test_scan_trigger_dedup.py  test_scan_websocket.py  (+23 more)
(+370 files in other folders)
