[project]
name = "akashic-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
    "meilisearch-python-sdk>=3.0",
    "redis[hiredis]>=5.2",
    "rq>=2.1",
    "python-multipart>=0.0.18",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "coverage>=7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
