[project]
name = "akashic-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0,<5",
    "httpx>=0.28",
    "meilisearch-python-sdk>=3.0",
    "paramiko>=3.4",
    "redis[hiredis]>=5.2",
    "rq>=2.1",
    "python-multipart>=0.0.18",
    "cryptography>=44.0",
    "python-ldap>=3.4",
    "croniter>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "coverage>=7.6",
]

[tool.hatch.build.targets.wheel]
packages = ["akashic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Pytest auto-discovery would otherwise crawl `akashic/` and try to
# collect any function named `test_*` it finds — including
# `services/source_tester.test_connection`, which is application code
# (a SourceTester probe), not a test. Pin collection to `tests/` so
# CI doesn't trip on prefix-shaped helpers in the package.
testpaths = ["tests"]
# Per-test loop scope for both fixtures and tests so the autouse setup_db
# fixture's engine creates and disposes asyncpg connections on the same
# loop the test runs on. With session scope, fixtures end up holding
# references bound to a different loop than the per-function test loop,
# causing `RuntimeError: Future attached to a different loop` during
# teardown.
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
